--- a/rangeseekbar-sample/build.gradle
+++ b/rangeseekbar-sample/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 repositories {
     maven {
         url "https://oss.sonatype.org/content/repositories/snapshots"
+        jcenter()
     }
 }
 
