--- a/rangeseekbar/build.gradle
+++ b/rangeseekbar/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.library'
 
-
+apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
 
 android {
     compileSdkVersion 25
@@ -33,6 +33,5 @@ dependencies {
 
     // Robolectric
     testCompile 'org.robolectric:robolectric:3.0+'
-    testCompile "org.mockito:mockito-core:1.9.5"}
-
-apply from: 'https://raw.github.com/chrisbanes/gradle-mvn-push/master/gradle-mvn-push.gradle'
+    testCompile "org.mockito:mockito-core:1.9.5"
+}
