--- a/rangeseekbar/build.gradle
+++ b/rangeseekbar/build.gradle
@@ -20,6 +20,11 @@ android {
         }
     }
     android.sourceSets.test.java.srcDirs += "build/generated/source/r/debug"
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
